--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>129</height>
+    <height>252</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,10 +15,17 @@
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="2" column="2">
-     <widget class="QPushButton" name="pb_Close">
+    <item row="3" column="2">
+     <widget class="QPushButton" name="pb_ReadVol">
       <property name="text">
-       <string>关闭电源输出</string>
+       <string>读取当前电压</string>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="2">
+     <widget class="QPushButton" name="pb_ReadCurrent">
+      <property name="text">
+       <string>读取当前电流</string>
       </property>
      </widget>
     </item>
@@ -26,20 +33,6 @@
      <widget class="QPushButton" name="pb_Set">
       <property name="text">
        <string>设置电源输出</string>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="3">
-     <widget class="QPushButton" name="pb_Open">
-      <property name="text">
-       <string>打开电源输出</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="0">
-     <widget class="QLabel" name="label_2">
-      <property name="text">
-       <string>电流</string>
       </property>
      </widget>
     </item>
@@ -56,6 +49,40 @@
       </property>
      </spacer>
     </item>
+    <item row="2" column="2">
+     <widget class="QPushButton" name="pb_Close">
+      <property name="text">
+       <string>关闭电源输出</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="3">
+     <widget class="QPushButton" name="pb_Open">
+      <property name="text">
+       <string>打开电源输出</string>
+      </property>
+     </widget>
+    </item>
+    <item row="6" column="0">
+     <widget class="QLabel" name="label_3">
+      <property name="text">
+       <string>地址</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1" colspan="4">
+     <widget class="QLineEdit" name="le_Voltage"/>
+    </item>
+    <item row="1" column="0">
+     <widget class="QLabel" name="label_2">
+      <property name="text">
+       <string>电流</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="1" colspan="4">
+     <widget class="QLineEdit" name="le_Current"/>
+    </item>
     <item row="0" column="0">
      <widget class="QLabel" name="label">
       <property name="text">
@@ -63,37 +90,59 @@
       </property>
      </widget>
     </item>
-    <item row="0" column="1" colspan="4">
-     <widget class="QLineEdit" name="le_Voltage"/>
-    </item>
-    <item row="1" column="1" colspan="4">
-     <widget class="QLineEdit" name="le_Current"/>
-    </item>
-    <item row="3" column="0">
-     <widget class="QLabel" name="label_3">
+    <item row="5" column="2">
+     <widget class="QPushButton" name="pb_ReadPower">
       <property name="text">
-       <string>地址</string>
+       <string>读取当前功率</string>
       </property>
      </widget>
     </item>
-    <item row="3" column="1" colspan="4">
+    <item row="6" column="1" colspan="4">
      <widget class="QLineEdit" name="lineEdit">
       <property name="text">
        <string>1</string>
       </property>
      </widget>
     </item>
-    <item row="4" column="4">
+    <item row="7" column="4">
      <widget class="QPushButton" name="pb_Read">
       <property name="text">
        <string>读取</string>
       </property>
      </widget>
     </item>
-    <item row="4" column="0" colspan="4">
+    <item row="3" column="3" colspan="2">
+     <widget class="QLabel" name="lb_Vol">
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+    </item>
+    <item row="7" column="0" colspan="4">
      <widget class="QLabel" name="lb_out">
       <property name="text">
        <string/>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="3" colspan="2">
+     <widget class="QLabel" name="lb_Current">
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="3" colspan="2">
+     <widget class="QLabel" name="lb_Power">
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+    </item>
+    <item row="8" column="4">
+     <widget class="QPushButton" name="pb_Test">
+      <property name="text">
+       <string>测试</string>
       </property>
      </widget>
     </item>
