--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -146,6 +146,13 @@
       </property>
      </widget>
     </item>
+    <item row="8" column="3">
+     <widget class="QPushButton" name="pb_Calc">
+      <property name="text">
+       <string>校准</string>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
  </widget>
